Fixed min width issue on mobile

--- a/assets/css/app/_layout.scss
+++ b/assets/css/app/_layout.scss
@@ -1,5 +1,4 @@
 .app-wrapper{
-  min-width: 600px;
   height: 100%;
   position: relative;
   display: flex;
